--- a/tutorial_basics.html
+++ b/tutorial_basics.html
@@ -47,6 +47,9 @@
 									<ul class="dropdown-menu">
                     <li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_asr.html">Speech Recognition</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_separation.html">Source Separation</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_enhancement.html">Speech Enhancement</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
 									</ul>
