--- a/tutorial_processing.html
+++ b/tutorial_processing.html
@@ -47,6 +47,9 @@
 									<ul class="dropdown-menu">
                     <li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_asr.html">Speech Recognition</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_separation.html">Source Separation</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_enhancement.html">Speech Enhancement</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
 									</ul>
@@ -89,32 +92,6 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="blog_left_sidebar">
-                            <article class="row blog_item">
-                               <div class="col-md-3">
-                                   <div class="blog_info text-right">
-                                        <div class="post_tag">
-                                            <a class="active" href="#">Speech Processing</a>
-                                        </div>
-                                        <ul class="blog_meta list">
-                                            <li><a href="about.html">Plantinga P.<i class="lnr lnr-user"></i></a></li>
-                                            <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
-                                            <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
-                                            <li><a href="#">Time: 30min<i class="lnr lnr-hourglass"></i></a></li>
-                                        </ul>
-                                    </div>
-                               </div>
-                                <div class="col-md-9">
-                                    <div class="blog_post">
-                                        <div class="blog_details">
-                                            <h2>Speech Enhancement From Scratch</h2>
-                                            <p>So you want to do regression tasks with speech? Look no further, you're in the right place.
-                                              This tutorial will walk you through a basic speech enhancement template with SpeechBrain to
-                                              show all the components needed for making a new recipe.</p>
-                                            <a href="https://colab.research.google.com/drive/18RyiuKupAhwWX7fh3LCatwQGU5eIS3TR?usp=sharing" class="blog_btn">Open in Google Colab</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </article>
                             <article class="row blog_item">
                                <div class="col-md-3">
                                    <div class="blog_info text-right">
@@ -220,31 +197,6 @@
                                               This is particularly harmful in distant-talking (far-field) scenarios, where the speaker and the reference microphone are distant
                                               (think about popular devices such as Google Home, Amazon Echo, Kinect, and similar devices).</p>
                                             <a href="https://colab.research.google.com/drive/1mAimqZndq0BwQj63VcDTr6_uCMC6i6Un?usp=sharing" class="blog_btn">Open in Google Colab</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </article>
-                            <article class="row blog_item">
-                               <div class="col-md-3">
-                                   <div class="blog_info text-right">
-                                        <div class="post_tag">
-                                            <a class="active" href="#">Speech Processing</a>
-                                        </div>
-                                        <ul class="blog_meta list">
-                                            <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
-                                            <li><a href="#">Jan. 2021<i class="lnr lnr-calendar-full"></i></a></li>
-                                            <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
-                                            <li><a href="#">Time: 30min<i class="lnr lnr-hourglass"></i></a></li>
-                                        </ul>
-                                    </div>
-                               </div>
-                                <div class="col-md-9">
-                                    <div class="blog_post">
-                                        <div class="blog_details">
-                                            <h2>Source Separation</h2>
-                                            <p>In source separation, the goal is to be able to separate out the sources from an observed mixture signal
-                                              which consists of superposition of several sources. In this tutorial, we cover few examples of performing source separation with SpeechBrain.</p>
-                                            <a href="https://colab.research.google.com/drive/1YxsMW1KNqP1YihNUcfrjy0zUp7FhNNhN?usp=sharing" class="blog_btn">Open in Google Colab</a>
                                         </div>
                                     </div>
                                 </div>
