--- a/tutorial_asr.html
+++ b/tutorial_asr.html
@@ -69,7 +69,7 @@
 				<div class="container">
 					<div class="blog_b_text text-center">
 						<h2>SpeechBrain Tutorials</h2>
-						<h3>SpeechBrain Advanced</h3>
+						<h3>Speech Recognition</h3>
 
 					</div>
 				</div>
@@ -92,91 +92,30 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="blog_left_sidebar">
-
                           <article class="row blog_item">
                              <div class="col-md-3">
                                  <div class="blog_info text-right">
                                       <div class="post_tag">
-                                          <a class="active" href="#">Neural Architectures</a>
+                                          <a class="active" href="#">Speech Recognition</a>
                                       </div>
                                       <ul class="blog_meta list">
-                                          <li><a href="about.html">Parcollet T.<i class="lnr lnr-user"></i></a></li>
-                                          <li><a href="#">April. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                          <li><a href="about.html">Ravanelli M. & Parcollet T.<i class="lnr lnr-user"></i></a></li>
+                                          <li><a href="#">Apr. 2021<i class="lnr lnr-calendar-full"></i></a></li>
                                           <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
-                                          <li><a href="#">Time: 10min<i class="lnr lnr-hourglass"></i></a></li>
+                                          <li><a href="#">Time: 45min<i class="lnr lnr-hourglass"></i></a></li>
                                       </ul>
                                   </div>
                              </div>
                               <div class="col-md-9">
                                 <div class="blog_post">
                                     <div class="blog_details">
-                                        <h2>Using Wav2Vec 2.0 from HuggingFace and Fairseq with SpeechBrain</h2>
-                                        <p>This tutorial describes how to combine (use and finetune) pretrained wav2vec2 models
-                                          coming both from fairseq or HuggingFace. Any wav2vec 2.0 model trained with the fairseq
-                                          toolkit or integrated to the transformers interface of HuggingFace can be then plugged to
-                                          SpeechBrain to approach a speech-related task: automatic speech recognition, speaker recognition,
-                                          spoken language understanding ...</p>
-                                        <a href="https://colab.research.google.com/drive/17Hu1pxqhfMisjkSgmM2CnZxfqDyn2hSY?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                        <h2>Speech Recognition From Scratch</h2>
+                                        <p>Do you want to figure out how to implement your speech recognizer with SpeechBrain? Look no further, you're in the right place. This tutorial will walk you through all the steps needed to implement an offline end-to-end attention-based speech recognizer. This is a self-contained tutorial that will help you "connecting the dots" across all the steps needed to train a modern speech recognizer. We will address data preparation, tokenizer training, language model, ASR model, and inference. We will explain how to train your model on your data.</p>
+                                        <a href="https://colab.research.google.com/drive/1aFgzrUv3udM_gNJNUoLaHIm78QHtxdIz?usp=sharing" class="blog_btn">Open in Google Colab</a>
                                     </div>
                                 </div>
                               </div>
                           </article>
-
-
-                            <article class="row blog_item">
-                               <div class="col-md-3">
-                                   <div class="blog_info text-right">
-                                        <div class="post_tag">
-                                            <a class="active" href="#">Neural Architectures</a>
-                                        </div>
-                                        <ul class="blog_meta list">
-                                            <li><a href="about.html">Parcollet T.<i class="lnr lnr-user"></i></a></li>
-                                            <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
-                                            <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
-                                            <li><a href="#">Time: 30min<i class="lnr lnr-hourglass"></i></a></li>
-                                        </ul>
-                                    </div>
-                               </div>
-                                <div class="col-md-9">
-                                  <div class="blog_post">
-                                      <div class="blog_details">
-                                          <h2>Complex and Quaternion Neural networks</h2>
-                                          <p>This tutorial demonstrates how to use the SpeechBrain implementation of complex-valued and quaternion-valued neural networks
-                                            for speech technologies. It covers the basics of highdimensional representations and the associated neural layers :
-                                            Linear, Convolution, Recurrent and Normalisation.</p>
-                                          <a href="https://colab.research.google.com/drive/1H6ObNswTd24ZwkXj3vHRxZcfXBKAsS3q?usp=sharing" class="blog_btn">Open in Google Colab</a>
-                                      </div>
-                                  </div>
-                                </div>
-                            </article>
-
-                            <article class="row blog_item">
-                               <div class="col-md-3">
-                                   <div class="blog_info text-right">
-                                        <div class="post_tag">
-                                            <a class="active" href="#">Neural Architectures</a>
-                                        </div>
-                                        <ul class="blog_meta list">
-                                            <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
-                                            <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
-                                            <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
-                                            <li><a href="#">Time: 30min<i class="lnr lnr-hourglass"></i></a></li>
-                                        </ul>
-                                    </div>
-                               </div>
-                                <div class="col-md-9">
-                                  <div class="blog_post">
-                                      <div class="blog_details">
-                                          <h2>Recurrent Neural Networks and SpeechBrain</h2>
-                                          <p>Recurrent Neural Networks (RNNs) offer a natural way to process sequences.
-                                            This tutorial demonstrates how to use the SpeechBrain implementations of RNNs including LSTMs, GRU, RNN and LiGRU a specific recurrent cell designed
-                                            for speech-related tasks. RNNs are at the core of many sequence to sequence models.</p>
-                                          <a href="https://colab.research.google.com/drive/1CTCzOP016D1c2SVg2jr9UHIz-xvcHgqP?usp=sharing" class="blog_btn">Open in Google Colab</a>
-                                      </div>
-                                  </div>
-                                </div>
-                            </article>
-
                             <nav class="blog-pagination justify-content-center d-flex">
 		                        <ul class="pagination">
 		                            <li class="page-item">
