--- a/tutorial_nn.html
+++ b/tutorial_nn.html
@@ -50,8 +50,9 @@
                     <li class="nav-item"><a class="nav-link" href="tutorial_asr.html">Speech Recognition</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_separation.html">Source Separation</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_enhancement.html">Speech Enhancement</a></li>
-                    <li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
+		    <li class="nav-item"><a class="nav-link" href="tutorial_classification.html">Speech Classification</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
+		    <li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
 									</ul>
 								</li>
 							</ul>
