--- a/tutorial_separation.html
+++ b/tutorial_separation.html
@@ -50,8 +50,9 @@
                     <li class="nav-item"><a class="nav-link" href="tutorial_asr.html">Speech Recognition</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_separation.html">Source Separation</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_enhancement.html">Speech Enhancement</a></li>
-                    <li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
+		    <li class="nav-item"><a class="nav-link" href="tutorial_classification.html">Speech Classification</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
+		    <li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -96,7 +97,7 @@
                              <div class="col-md-3">
                                  <div class="blog_info text-right">
                                       <div class="post_tag">
-                                          <a class="active" href="#">Speech Processing</a>
+                                          <a class="active" href="#">Source Separation</a>
                                       </div>
                                       <ul class="blog_meta list">
                                           <li><a href="about.html">Subakan C.<i class="lnr lnr-user"></i></a></li>
