--- a/contributing.html
+++ b/contributing.html
@@ -106,10 +106,12 @@
               </p>
               <h3> How can I help? </h3>
               <p class="justified large"> Interractions between speech technologies and deep learning are various and numerous.
-                Therefore, we do not provide any official development directions. Instead, we believe that the toolkit will evolve accordingly to the needs
+                We believe that the toolkit will evolve accordingly to the needs
                 of the different research fields and industry. Examples of contributions include new recipes, better models for higher performance,
-                new external functionalities, or even core changes and extensions. While we do not provide any instructions on the potential interesting applications,
-                feel free to jump into our <a href="https://speechbrain.discourse.group">Discourse</a> or <a href="https://github.com/speechbrain/speechbrain">GitHub</a> to see if any existing issue remains unsolved!
+                new external functionalities, or even core changes and extensions. Feel free to jump into our <a href="https://speechbrain.discourse.group">Discourse</a> or <a href="https://github.com/speechbrain/speechbrain">GitHub</a> to see if any existing issue remains unsolved!
+              </p>
+              <h3>SpeechBrain Roadmap</h3>
+              <p class="justified large"> As a community-based and open source project, SpeechBrain needs the help of its community to grow in the right direction. Opening the roadmap to our users enable the toolkit to benefit from new ideas, new research axes or even new technologies. The roadmap, available on our <a href="https://speechbrain.discourse.group/t/speechbrain-a-community-roadmap/179">Discourse</a>, lists all the changes and updates that need to be done in the current version of SpeechBrain. Users are more than welcome to propose new items via new Discourse topics!
               </p>
             </div>
 
