--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 								<a class="banner_btn2" href="https://github.com/speechbrain/speechbrain">GitHub</a>
                 <a class="banner_btn3" href="https://speechbrain.discourse.group">Discourse</a>
                 <a class="banner_btn4" href="https://huggingface.co/speechbrain"><img src="img/hf.svg" style="width:40px"/></a>
+		<iframe src="https://ghbtns.com/github-btn.html?user=speechbrain&repo=speechbrain&type=star&count=true&size=large&v=2" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
 							</div>
 						</div>
 						<div class="col-lg-5">
@@ -96,6 +97,7 @@
 						</div>
 					</div>
 				</div>
+   
       </div>
         </section>
         <!--================End Home Banner Area =================-->
