--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         		<div class="main_title">
         			<h2>Key Features</h2>
         			<p>SpeechBrain is an open-source and all-in-one speech toolkit.
-                It is designed to be simple, extremely flexible, and user-friendly. State-of-the-art performance are obtained in various domains.</p>
+                It is designed to be simple, extremely flexible, and user-friendly. Competitive or state-of-the-art performance is obtained in various domains.</p>
         		</div>
         		<div class="work_inner row">
         			<div class="col-lg-4">
