--- a/contributing.html
+++ b/contributing.html
@@ -81,7 +81,7 @@
               <h2>Contributing to the code of SpeechBrain</h2>
               <p class="justified large"> The goal is to write a set of libraries that process audio and speech in several ways.
                 It is crucial to write a set of homogeneous libraries that are all compliant to a set of guidelines all described
-                in our <a href="documentation/contributing.html"> documentation </a>.
+                in our <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> documentation </a>.
               </p>
               <h3> Zen of SpeechBrain </h3>
               <p class="justified large"> SpeechBrain could be used for research, academic, commercial, non-commercial purposes.
@@ -97,7 +97,7 @@
               <h3> How to get my code into SpeechBrain? </h3>
               <p class="justified large"> SpeechBrain is hosted via <a href="https://github.com/speechbrain/speechbrain"> GitHub </a>. Hence, the process of integrating your code
                 to the toolkit will be done via this plateform. Then, three steps can be followed: <br/><br/>
-                <b>1.</b> Fork, clone the <a href="https://github.com/speechbrain/speechbrain">repository</a> and install our test suite as detailled in <a href="documentation/contributing.html"> the documentation </a>. <br/>
+                <b>1.</b> Fork, clone the <a href="https://github.com/speechbrain/speechbrain">repository</a> and install our test suite as detailled in <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> the documentation </a>. <br/>
                 <b>2.</b> Add your code and make sure that the tests still run properly. Commit your changes to your fork with our pre-commit tests to ensure the normalisation of your code.
                 Then open a pull request on the official repository.<br/>
                 <b>3.</b> Participate in the review process. Each pull request is reviewed by one or two reviewers.
