--- a/about.html
+++ b/about.html
@@ -143,6 +143,7 @@
                   <div><img src="img/partners/logo_lia.png" alt=""></div>
                   <div><img src="img/partners/logo_cambridge.png" alt=""></div>
                   <div><img src="img/partners/logo_sherbrooke.jpg" alt=""></div>
+		  <div><img src="img/partners/logo_bioASP.jpg" alt=""></div>
                 </div>
               </div>
             </div>
