--- a/contributing.html
+++ b/contributing.html
@@ -41,11 +41,15 @@
                 <li class="nav-item"><a class="nav-link" href="https://speechbrain.readthedocs.io/en/latest/index.html">Documentation</a>
 								<li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials</a>
-									<ul class="dropdown-menu">
+                  <ul class="dropdown-menu">
                     <li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
-                    <li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_asr.html">Speech Recognition</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_separation.html">Source Separation</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tutorial_enhancement.html">Speech Enhancement</a></li>
+		                <li class="nav-item"><a class="nav-link" href="tutorial_classification.html">Speech Classification</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
+		                <li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
 									</ul>
 								</li>
 							</ul>
