--- a/tutorial_basics.html
+++ b/tutorial_basics.html
@@ -120,6 +120,32 @@
                                <div class="col-md-3">
                                    <div class="blog_info text-right">
                                         <div class="post_tag">
+                                            <a class="active" href="#">What can I do with SpeechBrain?</a>
+                                        </div>
+                                        <ul class="blog_meta list">
+                                            <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Jan. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 10min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                  <div class="blog_post">
+                                      <div class="blog_details">
+                                          <h2>Brain Class</h2>
+                                          <p>In this tutorial, we provide a high-level description of the speech tasks currently supported by SpeechBrain. 
+					  We also show how to perform inference on speech recognition, speech separation, speaker verification, and other applications.
+					  </p>
+                                          <a href="https://colab.research.google.com/drive/1mhvu5eyEzNBBhNC6sknG-kgD2ZQ6NEyI?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                      </div>
+                                  </div>
+                                </div>
+                            </article>
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
                                             <a class="active" href="#">SpeechBrain Basics</a>
                                         </div>
                                         <ul class="blog_meta list">
