--- a/tutorial_basics.html
+++ b/tutorial_basics.html
@@ -120,7 +120,7 @@
                                <div class="col-md-3">
                                    <div class="blog_info text-right">
                                         <div class="post_tag">
-                                            <a class="active" href="#">What can I do with SpeechBrain?</a>
+                                            <a class="active" href="#">SpeechBrain Basics</a>
                                         </div>
                                         <ul class="blog_meta list">
                                             <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
@@ -133,7 +133,7 @@
                                 <div class="col-md-9">
                                   <div class="blog_post">
                                       <div class="blog_details">
-                                          <h2>Brain Class</h2>
+                                          <h2>What can I do with SpeechBrain?</h2>
                                           <p>In this tutorial, we provide a high-level description of the speech tasks currently supported by SpeechBrain. 
 					  We also show how to perform inference on speech recognition, speech separation, speaker verification, and other applications.
 					  </p>
