--- a/tutorial_advanced.html
+++ b/tutorial_advanced.html
@@ -137,7 +137,7 @@
                                 <div class="blog_post">
                                     <div class="blog_details">
                                         <h2>How to Load Big Datasets from the Shared Filesystem</h2>
-                                        <p>Do you have a huge dataset stored in a shared file system? This tutorial will show you how to load large datasets from the shared file system and use then for training a neural network with SpeechBrain. 
+                                        <p>Do you have a huge dataset stored in a shared file system? This tutorial will show you how to load large datasets from the shared file system and use them for training a neural network with SpeechBrain. 
 					In particular, we describe a solution based on the WebDataset library, that is easy to integrate within the SpeechBrain toolkit. </p>
                                         <a href="https://colab.research.google.com/drive/1s171JSA53_ktvc1zQp6uMcM0TChtCcZ9?usp=sharing" class="blog_btn">Open in Google Colab</a>
                                     </div>
