--- a/tutorial_classification.html
+++ b/tutorial_classification.html
@@ -118,6 +118,30 @@
                                   </div>
                               </div>
                           </article>
+                          <article class="row blog_item">
+                             <div class="col-md-3">
+                                 <div class="blog_info text-right">
+                                      <div class="post_tag">
+                                          <a class="active" href="#">Voice Activity Detection</a>
+                                      </div>
+                                      <ul class="blog_meta list">
+                                          <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
+                                          <li><a href="#">Sept. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                          <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
+                                          <li><a href="#">Time: 15min<i class="lnr lnr-hourglass"></i></a></li>
+                                      </ul>
+                                  </div>
+                             </div>
+                              <div class="col-md-9">
+                                  <div class="blog_post">
+                                      <div class="blog_details">
+                                          <h2>Voice Activity Detection</h2>
+                                          <p>In this tutorial, we show how to use SpeechBrain for voice activity detection. The tutorial will describe how to train a neural VAD and use it for inference on long audio recordings.</p>
+                                          <a href="https://colab.research.google.com/drive/1Msk2cgSEw-jCuXHmz2_-iOrv-gJHCCxu?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                      </div>
+                                  </div>
+                              </div>
+                          </article>
                             <nav class="blog-pagination justify-content-center d-flex">
 		                        <ul class="pagination">
 		                            <li class="page-item">
