--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
             <div class="main_title">
         			<h2>Sponsors</h2>
         			<p>SpeechBrain thanks its generous sponsors. Sponsoring allows us to expand the team and further extend the functionalities of the toolkit.</p>
+		    		<p> News: the new call for sponsors (2022) is open! <a href="https://drive.google.com/file/d/1Njn_T2qLJCLPmF2LJ_X7yxxobqK3-CPW/view?usp=sharing">Take a look here if you are interested!</a><p>
         		</div>
             <div class="work_inner row">
               <div class="col-lg-4">
