--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
         	<div class="container">
             <div class="main_title">
         			<h2>Sponsors</h2>
-		    		<p> News: the new call for sponsors (2022) is open! <a href="https://drive.google.com/file/d/1Njn_T2qLJCLPmF2LJ_X7yxxobqK3-CPW/view?usp=sharing">Take a look here if you are interested!</a><p>
+		    		<p> News: the new call for sponsors (2022) is open!</p> 
+		    		<p><a href="https://drive.google.com/file/d/1Njn_T2qLJCLPmF2LJ_X7yxxobqK3-CPW/view?usp=sharing">Take a look here if you are interested!</a></p>
         		</div>
             <div class="work_inner row">
               <div class="col-lg-4">
