adding inferrence tutorial

--- a/tutorial_advanced.html
+++ b/tutorial_advanced.html
@@ -97,6 +97,31 @@
                                           <a class="active" href="#">SpeechBrain Advanced</a>
                                       </div>
                                       <ul class="blog_meta list">
+                                          <li><a href="about.html">Parcollet T.<i class="lnr lnr-user"></i></a></li>
+                                          <li><a href="#">Sept.. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                          <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                          <li><a href="#">Time: 30min<i class="lnr lnr-hourglass"></i></a></li>
+                                      </ul>
+                                  </div>
+                             </div>
+                              <div class="col-md-9">
+                                <div class="blog_post">
+                                    <div class="blog_details">
+                                        <h2>Inferring on your own SpeechBrain models</h2>
+                                        <p>In this tutorial, we will learn the three different ways of inferring on a trained model.
+                                          This is particularly useful to debug your pipeline or to deploy a model in a production context.</p>
+                                        <a href="https://colab.research.google.com/drive/1137MD-gAERblRAVhxDnwNXV3YyAiwtxV?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                    </div>
+                                </div>
+                              </div>
+                          </article>
+                          <article class="row blog_item">
+                             <div class="col-md-3">
+                                 <div class="blog_info text-right">
+                                      <div class="post_tag">
+                                          <a class="active" href="#">SpeechBrain Advanced</a>
+                                      </div>
+                                      <ul class="blog_meta list">
                                           <li><a href="about.html">Cornell S. & Parcollet T.<i class="lnr lnr-user"></i></a></li>
                                           <li><a href="#">Mar. 2021<i class="lnr lnr-calendar-full"></i></a></li>
                                           <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
@@ -137,14 +162,14 @@
                                 <div class="blog_post">
                                     <div class="blog_details">
                                         <h2>Data Loading for Big Datasets and Shared Filesystems</h2>
-                                        <p>Do you have a huge dataset stored in a shared file system? This tutorial will show you how to load large datasets from the shared file system and use them for training a neural network with SpeechBrain. 
+                                        <p>Do you have a huge dataset stored in a shared file system? This tutorial will show you how to load large datasets from the shared file system and use them for training a neural network with SpeechBrain.
 					In particular, we describe a solution based on the WebDataset library, that is easy to integrate within the SpeechBrain toolkit. </p>
                                         <a href="https://colab.research.google.com/drive/1s171JSA53_ktvc1zQp6uMcM0TChtCcZ9?usp=sharing" class="blog_btn">Open in Google Colab</a>
                                     </div>
                                 </div>
                               </div>
                           </article>
-				
+
                           <article class="row blog_item">
                              <div class="col-md-3">
                                  <div class="blog_info text-right">
