--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						</div>
 					</div>
 				</div>
-   
+
       </div>
         </section>
         <!--================End Home Banner Area =================-->
@@ -297,17 +297,30 @@
         <!--================END BIG MENU Area =================-->
 
 
-
-
         <!--================Screen Area =================-->
         <section class="screen_area text-center p_120">
         	<div class="container">
             <div class="main_title">
         			<h2>Sponsors</h2>
-		    		<p> News: the new call for sponsors (2022) is now open.</p> 
-		    		<p><a href="https://drive.google.com/file/d/1Njn_T2qLJCLPmF2LJ_X7yxxobqK3-CPW/view?usp=sharing">Take a look here if you are interested!</a></p>
+            <p> They are, or they sponsored SpeechBrain! </p>
+		    		<p> <a href="https://drive.google.com/file/d/1Njn_T2qLJCLPmF2LJ_X7yxxobqK3-CPW/view?usp=sharing"> Our new call for sponsors (2022) is now open. </a></p>
         		</div>
             <div class="work_inner row">
+              <div class="col-lg-4">
+                <div class="work_item">
+                    <img src="img/hf.ico" alt="hf" style="max-width: 170px;"></i>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="work_item">
+                    <img src="img/partners/logo_lia.png" alt="lia" style="max-width: 175px; padding-top:20px;"></i>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="work_item">
+                    <img class="img-partner" src="img/sponsors/logo_vd.png" style="max-width: 250px; padding-top:60px;"></i>
+                </div>
+              </div>
               <div class="col-lg-4">
                 <div class="work_item">
                   <img class="img-partner" src="img/sponsors/logo_mila_small.png"></i>
@@ -323,19 +336,14 @@
                     <img class="img-partner" src="img/sponsors/logo_dolby.png" style="max-width: 175px"></i>
                 </div>
               </div>
-              <div class="col-lg-4">
+              <div class="col-lg-6">
                 <div class="work_item">
                   <img class="img-partner" src="img/sponsors/logo_nvidia.png" style="max-width: 175px"></i>
                 </div>
               </div>
-              <div class="col-lg-4">
+              <div class="col-lg-6">
                 <div class="work_item">
                     <img class="img-partner" src="img/sponsors/samsung_official.png" style="max-width: 190px; padding-top:45px;"></i>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="work_item">
-                    <img class="img-partner" src="img/sponsors/logo_vd.png" style="max-width: 250px; padding-top:45px;"></i>
                 </div>
               </div>
             </div>
