add FL tutorial

--- a/tutorial_advanced.html
+++ b/tutorial_advanced.html
@@ -151,10 +151,35 @@
                                           <a class="active" href="#">SpeechBrain Advanced</a>
                                       </div>
                                       <ul class="blog_meta list">
-                                          <li><a href="about.html">Rouhe A.<i class="lnr lnr-user"></i></a></li>
-                                          <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
-                                          <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
-                                          <li><a href="#">Time: 15min<i class="lnr lnr-hourglass"></i></a></li>
+                                          <li><a href="about.html">Gao Y. & Parcollet T.<i class="lnr lnr-user"></i></a></li>
+                                          <li><a href="#">Nov. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                          <li><a href="#">Difficulty: high<i class="lnr lnr-cog"></i></a></li>
+                                          <li><a href="#">Time: 45min<i class="lnr lnr-hourglass"></i></a></li>
+                                      </ul>
+                                  </div>
+                             </div>
+                              <div class="col-md-9">
+                                <div class="blog_post">
+                                    <div class="blog_details">
+                                        <h2>Federated Speech Model Training via SpeechBrain and Flower</h2>
+                                        <p>Are you interested in both federated learning (FL) and speech, but worried about the proper tools to run experiments? Today you will get the answer.
+                                          This tutorial introduces how to integrate Flower and SpeechBrain to achieve federated speech model training.</p>
+                                        <a href="https://colab.research.google.com/drive/1Jmx6NhYuLy0Rj3wtF3l3PIxLFSwI0Cym?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                    </div>
+                                </div>
+                              </div>
+                          </article>
+                          <article class="row blog_item">
+                             <div class="col-md-3">
+                                 <div class="blog_info text-right">
+                                      <div class="post_tag">
+                                          <a class="active" href="#">SpeechBrain Advanced</a>
+                                      </div>
+                                      <ul class="blog_meta list">
+                                        <li><a href="about.html">Rouhe A.<i class="lnr lnr-user"></i></a></li>
+                                        <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                        <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                        <li><a href="#">Time: 15min<i class="lnr lnr-hourglass"></i></a></li>
                                       </ul>
                                   </div>
                              </div>
@@ -169,7 +194,6 @@
                                 </div>
                               </div>
                           </article>
-
                           <article class="row blog_item">
                              <div class="col-md-3">
                                  <div class="blog_info text-right">
