--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						</div>
 						<div class="col-lg-5">
 							<div class="home_left_img">
-								<img class="img-fluid" src="img/logo_noname_rounded_very_small.png" alt="">
+								<img class="img-fluid" src="img/logo_noname_rounded_big.png" style="max-height:300px"alt="">
 							</div>
 						</div>
 					</div>
