--- a/tutorial_advanced.html
+++ b/tutorial_advanced.html
@@ -97,6 +97,30 @@
                                           <a class="active" href="#">SpeechBrain Advanced</a>
                                       </div>
                                       <ul class="blog_meta list">
+                                          <li><a href="about.html">Ploujnikov A.<i class="lnr lnr-user"></i></a></li>
+                                          <li><a href="#">Nov. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                          <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                          <li><a href="#">Time: 25min<i class="lnr lnr-hourglass"></i></a></li>
+                                      </ul>
+                                  </div>
+                             </div>
+                              <div class="col-md-9">
+                                <div class="blog_post">
+                                    <div class="blog_details">
+                                        <h2>Hyperparameter Optimization with Orion</h2>
+                                        <p>Do you want to optimize the hyperparameters of your model? This tutorial will describe how you can optimize the hyperparameter of your SpeechBrain model using the Orion toolkit.</p>
+                                        <a href="https://colab.research.google.com/drive/1b-5EOjZC7M9RvfWZ0Pq0HMV0KmQKu730?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                    </div>
+                                </div>
+                              </div>
+                          </article>
+                          <article class="row blog_item">
+                             <div class="col-md-3">
+                                 <div class="blog_info text-right">
+                                      <div class="post_tag">
+                                          <a class="active" href="#">SpeechBrain Advanced</a>
+                                      </div>
+                                      <ul class="blog_meta list">
                                           <li><a href="about.html">Gao Y. & Parcollet T.<i class="lnr lnr-user"></i></a></li>
                                           <li><a href="#">Nov. 2021<i class="lnr lnr-calendar-full"></i></a></li>
                                           <li><a href="#">Difficulty: high<i class="lnr lnr-cog"></i></a></li>
