--- a/tutorial_advanced.html
+++ b/tutorial_advanced.html
@@ -107,7 +107,7 @@
                               <div class="col-md-9">
                                 <div class="blog_post">
                                     <div class="blog_details">
-                                        <h2>Hyperparameter Optimization with Orion</h2>
+                                        <h2>Hyperparameter Optimization</h2>
                                         <p>Do you want to optimize the hyperparameters of your model? This tutorial will describe how you can optimize the hyperparameter of your SpeechBrain model using the Orion toolkit.</p>
                                         <a href="https://colab.research.google.com/drive/1b-5EOjZC7M9RvfWZ0Pq0HMV0KmQKu730?usp=sharing" class="blog_btn">Open in Google Colab</a>
                                     </div>
